--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Delivery Food — доставка еды на дом</title>
+    <title>Delivery Food — доставка еды на дом.</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet"/>
 		<link rel="stylesheet" href="lib/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/normalize.css"/>
